--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,6 +1,7 @@
 ---
 layout: base
-title: Gallery
+title: Gallery - GeoNode
+body_class: "geonode-features sites-gallery"
 ---    
 <section class="banner">
   <div class="container">
@@ -481,6 +482,10 @@ title: Gallery
 <section class="feature-details feature3" id="worldwide">
   <div class="container">
     <div class="row">
+      <div class="span5">
+       <a href="http://geoavalanche.org" target="_new"><img src=../static/img/geoavalanche.png width="325" height="189" alt="GeoAvalanche" class="feature-img thumbnail" /></a>
+
+     </div>
       <div class="span7">
         <div class="highlighted-box">
           <h2>GeoAvalanche</strong></h2>
@@ -497,10 +502,7 @@ title: Gallery
           </div>
         </div>
       </div>
-      <div class="span5">
-       <a href="http://geoavalanche.org" target="_new"><img src=../static/img/geoavalanche.png width="325" height="189" alt="GeoAvalanche" class="feature-img thumbnail" /></a>
-
-     </div>
+      
    </div>
  </div>
 </section>        
