--- a/dev_features.html
+++ b/dev_features.html
@@ -12,7 +12,7 @@ body_class: "geonode-features dev-features"
           <span>Learn more about the powerful development features of <strong>GeoNode</strong>.</span>
         </h1>
         <div>
-          <a href="{{ dev_workshop }}" class="btn btn-success" target = "_blank">Follow the <strong>Developers Workshop</strong></a>
+          <a href="http://docs.geonode.org/en/latest/tutorials/devel/" class="btn btn-success" target = "_blank">Follow the <strong>Developers Workshop</strong></a>
         </div>
       </div>
       <div class="span6">
@@ -48,7 +48,7 @@ body_class: "geonode-features dev-features"
       <div class="span7 number one">
         <div class="highlighted-box">
           <h2>Open Source Geospatial</strong></h2>
-          <h4>Open from top to </h4>
+          <h4>Open from top to bottom</h4>
           <div>
            <p>GeoNode is built upon a platform of proven open source components including Django, GeoServer, pycsw, OpenLayers and GeoExt. GeoNode implements many Open Geospatial Consortium (OGC) standards, including Web Map Service (WMS), Web Feature Service (WFS), Web Coverage Service (WCS), KML, and Catalogue Service for Web (CSW). GeoNode development also contributes to the underlying open source projects and software libraries.</p>
            <p>Features include: 
