other baser fixes

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -14,7 +14,7 @@ body_class: "geonode-features sites-gallery"
 
       </div>
       <div class="span6">
-        <img src="../static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
+        <img src="{{site.baseurl}}/static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
       </div>
     </div>
   </div>
