--- a/communication/index.html
+++ b/communication/index.html
@@ -16,7 +16,7 @@ body_class: "communication"
       </div>
       <div class="span4">
         <article class="article1">
-          <img src="../static/img/icons/mailing_list_black.png" width="72" height="58" alt="" class="icon" />
+          <img src="{{site.baseurl}}/static/img/icons/mailing_list_black.png" width="72" height="58" alt="" class="icon" />
           <h4>Users Mailing Lists</h4>
           <p>This list is for users. It’s focused on questions about GeoNode itself, but it’s also great to post about topics around GeoNode, and implementations of projects on top of GeoNode. This can include customization of Django and other GeoNode libraries.</p>
           <ul>
@@ -27,7 +27,7 @@ body_class: "communication"
       </div>
       <div class="span4">
         <article id="mailing-lists" class="article1">
-          <img src="../static/img/icons/mailing_list_black.png" width="72" height="58" alt="" class="icon" />
+          <img src="{{site.baseurl}}/static/img/icons/mailing_list_black.png" width="72" height="58" alt="" class="icon" />
           <h4>Developer Mailing Lists</h4>
           <p>This is where all active development of GeoNode takes place. If you’re knee deep in the code it’s the place to email. Traffic can be high, as we try to make most all conversations public so people know what’s going on.</p>
           <ul>
@@ -38,7 +38,7 @@ body_class: "communication"
       </div>
       <div class="span4">
         <article id="irc" class="article1">
-          <img src="../static/img/icons/irc_black.png" width="81" height="80" alt="" class="icon" />
+          <img src="{{site.baseurl}}/static/img/icons/irc_black.png" width="81" height="80" alt="" class="icon" />
           <h4>IRC</h4>
           <p>The GeoNode community is available on IRC for interactive question and answer.  You can often find active developers, helpful users, and all manner of activity. It can be a useful way to find a quick answer or interact on a problem.</p>
 
